# task_graph_cpp_20250522

./: .gitignore  CMakeLists.txt  build.sh  readme.md  test_unique_list.cpp
docs/previous_designs/: design_dag_check.md  design_task_graph.md
docs/previous_designs/previous_demo_20250524/: facade_demo.cpp
src/: main.cpp
src.junk/task_graph_cpp/: node_base.hpp  task_graph.cpp  task_graph.hpp
src/data/: unique_list.hpp
src/data/utils/hash/: hash_fnv1a.cpp  hash_fnv1a.hpp
src/task_graph_cpp/: node_base.cpp
src/tg/core/: context.cpp  context.hpp  fwd.hpp  global_dataset.cpp  global_dataset.hpp  subgraph.cpp  subgraph.hpp  task.cpp  task.hpp  task_data.cpp  task_data.hpp  task_data_flags.hpp  task_dataset.cpp  task_dataset.hpp  task_graph.cpp  task_graph.hpp  task_input.fwd.hpp  task_input.hpp  task_output.fwd.hpp  task_output.hpp
src/tg/core/test_case/: blur_task.cpp  blur_task.hpp  fake_opencv.hpp  test_case_main.cpp  test_case_main.hpp
src/tg/demo/: facade_demo.hpp  factory_demo_3_cpp.md  factory_demo_cpp.md
src/tg/demo/ai_review/: ai_review_20250525_0959am.md
src/tg/demo/design_docs/: factory_demo_4_cpp.md  factory_demo_6_cpp.md
src/tg/facade/: facade_common.hpp  readme.md  subgraph.hpp
